--- a/readme.yaml
+++ b/readme.yaml
@@ -28,6 +28,7 @@ readme:
       ```
       git clone git@github.com:slavsan/go-readme.git
       ```
+    git_hooks:
     deps:
     dev:
     build: |
@@ -55,6 +56,8 @@ readme:
       ```
       golangci-lint run
       ```
+    docs:
+    profiling:
     coverage:
     static_analysis:
     swagger:
